[gd_scene load_steps=10 format=3 uid="uid://cq6qd5j2wrvcl"]

[ext_resource type="Script" uid="uid://dqllolrea6ml7" path="res://scenes/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://cpew7t3b4wg8e" path="res://assets/Background.png" id="2_bqqt6"]
[ext_resource type="FontFile" uid="uid://c50p2df7g3rnl" path="res://assets/free-pixel-art-tiny-hero-sprites/Font/04B_30__.TTF" id="3_wu84c"]
[ext_resource type="AudioStream" uid="uid://c4o5fskj3shm7" path="res://assets/Got a Date_.mp3" id="4_wu84c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ln24"]
texture = ExtResource("2_bqqt6")
modulate_color = Color(0.67069, 0.67069, 0.67069, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqqt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0.633757, 0.633757, 0.633757, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
bg_color = Color(0.635294, 0.635294, 0.635294, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8ln24")

[node name="title" type="Label" parent="background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -164.0
offset_right = 199.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_wu84c")
theme_override_font_sizes/font_size = 40
text = "KnockThemOut"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -56.0
offset_right = 147.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="startgame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wu84c")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oa1go")
theme_override_styles/normal = SubResource("StyleBoxFlat_l6cm7")
text = "Start Game"

[node name="option" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wu84c")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/normal = SubResource("StyleBoxFlat_l6cm7")
text = "Options"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wu84c")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_rtw2f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/normal = SubResource("StyleBoxFlat_l6cm7")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wu84c")
autoplay = true

[connection signal="pressed" from="VBoxContainer/startgame" to="." method="_on_startgame_pressed"]
[connection signal="pressed" from="VBoxContainer/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
